--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,6 +53,7 @@
         app:cardCornerRadius="15dp">
 
         <LinearLayout
+            android:id="@+id/linerLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -66,7 +67,7 @@
                 android:layout_height="75dp"
                 android:layout_marginVertical="10dp"
                 android:layout_marginStart="10dp"
-                android:src="@drawable/ic_baseline_person_3_24"
+                android:src="@drawable/ic_profile_pic"
                 android:visibility="visible"
                 app:civ_border_color="#efefef"
                 app:civ_border_width="2dp"
@@ -176,15 +177,15 @@
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <GridView
+            android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_margin="10dp"
+            android:layout_marginTop="400dp"
+            android:numColumns="2" />
 
-    <GridView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:numColumns="2" />
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
