--- a/app/src/main/res/layout/transaction_history_layout.xml
+++ b/app/src/main/res/layout/transaction_history_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
    <androidx.cardview.widget.CardView
