--- a/app/src/main/res/layout/activity_recent_transactions.xml
+++ b/app/src/main/res/layout/activity_recent_transactions.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WalletPackage.RecentTransactions"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".WalletPackage.RecentTransactions">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/red"
         android:layout_height="55dp"
+        android:background="@color/red"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
@@ -23,8 +23,8 @@
                 android:id="@+id/backPress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
                 android:background="@drawable/ic_baseline_arrow_back_24"
+                android:backgroundTint="@color/white"
                 android:gravity="left" />
 
             <TextView
@@ -46,11 +46,12 @@
         android:layout_margin="10dp"
         android:layout_marginTop="70dp"
         android:orientation="vertical">
+
         <ListView
+            android:id="@+id/listViewNotification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:id="@+id/listViewNotification"/>
+            android:layout_marginTop="5dp" />
 
     </LinearLayout>
 
