--- a/app/src/main/res/layout/transaction_history_layout.xml
+++ b/app/src/main/res/layout/transaction_history_layout.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="5dp">
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginLeft="2dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="2dp"
-        app:cardBackgroundColor="@color/light_gray"
-        app:cardCornerRadius="4dp">
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/border_list_price"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_margin="4dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/signConvention"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:text="+"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -36,7 +34,7 @@
                 android:id="@+id/symbol_rupees"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/green_rupees"
+                android:drawableLeft="@drawable/ic_baseline_currency_rupee_22"
                 android:drawablePadding="2dp"
                 android:text="0"
                 android:textColor="@color/black"
@@ -61,6 +59,6 @@
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
