--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
                     android:gravity="center"
-                    android:text="YoYo Iq"
+                    android:text="YoYo iQ"
                     android:textColor="#ffff"
                     android:textSize="15sp" />
 
