--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="red">#D70101</color>
     <color name="red_light">#8FB3B8</color>
     <color name="red_1">#71062D</color>
+    <color name="red_2">#1D070F</color>
+    <color name="red_3">#DC477D</color>
     <color name="green">#109E38</color>
     <color name="dark_green">#006400</color>
     <color name="gray">#6A6A6A</color>
