--- a/app/src/main/res/layout/activity_kycactivity.xml
+++ b/app/src/main/res/layout/activity_kycactivity.xml
@@ -236,7 +236,7 @@
                         android:drawablePadding="4dp"
                         android:maxLength="12"
                         android:hint="Enter your Address"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:padding="7dp" />
 
                 </LinearLayout>
